[project]
name = "ai-travel-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain[openai]>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-core>=0.3.61",
    "langgraph>=0.4.7",
    "duckduckgo-search>=8.0.2",
]
